--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>My Projects</title>
     <style>
-        body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; }
+        body { font-family: 'Times New Roman', Times, serif; max-width: 800px; margin: 0 auto; padding: 20px; }
         .project { border: 1px solid #ddd; padding: 15px; margin-bottom: 20px; border-radius: 5px; }
         .project h2 { margin-top: 0; }
     </style>
@@ -17,7 +17,8 @@
         <p>Description of project</p>
       <a href="https://drive.google.com/drive/folders/1WmXP2KTJeclcj2kHBBOtnXS7Cw0wYydV?usp=sharing" target="_blank">
         View Project (Screenshots)</a>  | 
-        <a href="#">GitHub Repository</a>
+        <a href="#">GitHub Repository For Code</a>
+         <a href="https://diyor52.github.io/Enhanced-Calendar-App-HTML-GUI-/">GitHub Repository for GUI in HTML</a>
     </div>
     
     
