--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         View Project (Screenshots)</a>  | 
         <a href="https://github.com/Diyor52/Enhanced-Calendar-App-Code-">GitHub Repository For Code</a> | 
          <a href="https://diyor52.github.io/Enhanced-Calendar-App-HTML-GUI-/">GitHub Repository for GUI in HTML</a>
+          <a href="https://www.canva.com/design/DAGsIlesGh8/b4MzilaQXdmaa9mgERfvVA/edit?utm_content=DAGsIlesGh8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Canva Slide Link</a>
     </div>
     
     
