--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <a href="https://drive.google.com/drive/folders/1WmXP2KTJeclcj2kHBBOtnXS7Cw0wYydV?usp=sharing" target="_blank">
         View Project (Screenshots)</a>  | 
         <a href="https://github.com/Diyor52/Enhanced-Calendar-App-Code-">GitHub Repository For Code</a> | 
-         <a href="https://diyor52.github.io/Enhanced-Calendar-App-HTML-GUI-/">GitHub Repository for GUI in HTML</a>
-          <a href="https://www.canva.com/design/DAGsIlesGh8/b4MzilaQXdmaa9mgERfvVA/edit?utm_content=DAGsIlesGh8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Canva Slide Link</a>
+         <a href="https://diyor52.github.io/Enhanced-Calendar-App-HTML-GUI-/">GitHub Repository for GUI in HTML</a> |
+          <a href=https://www.canva.com/design/DAGt6v9CYc4/RYavoNukYJgxmn_YirDXSw/edit?utm_content=DAGt6v9CYc4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton ">Canva Slide Link</a>
     </div>
     
     
